[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Main/Main.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Main/StartLabel.gd" type="Script" id=3]
[ext_resource path="res://Scenes/SongRunner/SongRunner.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/SongRunner/SongBrowser.tscn" type="PackedScene" id=5]

[node name="Main" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1000.0
margin_bottom = 504.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -7.0
margin_bottom = 7.0
text = "w to start"
align = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SongBrowser" parent="." instance=ExtResource( 5 )]

[node name="SongRunner" parent="." instance=ExtResource( 4 )]
